--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,16 +147,44 @@ jobs:
           helm repo update
           helm upgrade --install prometheus-stack prometheus-community/kube-prometheus-stack --values src/helloworld-service/prometheus.values.demo.yaml --wait --debug --atomic --timeout 600s --namespace "prometheus" --create-namespace
 
-      # Deploy Bicep file Log Analytics workspace
-      - name: Deploy Bicep file Log Analytics workspace
-        uses: azure/arm-deploy@v1
-        with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-          resourceGroupName: ${{ secrets.AZURE_RG }}
-          template: ./Bicep/ALA/mainALA.bicep
-          parameters: name="${{ env.AZURELOGANALYTICSWORKSPACENAME }}"  location="westeurope"
-          failOnStdErr: false
+      # # Deploy Bicep file Log Analytics workspace
+      # - name: Deploy Bicep file Log Analytics workspace
+      #   uses: azure/arm-deploy@v1
+      #   with:
+      #     subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+      #     resourceGroupName: ${{ secrets.AZURE_RG }}
+      #     template: ./Bicep/ALA/mainALA.bicep
+      #     parameters: name="${{ env.AZURELOGANALYTICSWORKSPACENAME }}"  location="westeurope"
+      #     failOnStdErr: false
 
+      # Set up Chaos Mesh on your AKS cluster
+      - name: Set up Chaos Mesh on your AKS cluster
+        run: |
+          helm repo add chaos-mesh https://charts.chaos-mesh.org
+          helm repo update
+          helm install chaos-mesh chaos-mesh/chaos-mesh --namespace=chaos-testing --set chaosDaemon.runtime=containerd --set chaosDaemon.socketPath=/run/containerd/containerd.sock --namespace "chaos-testing" --create-namespace
+
+      # Deploy Chaos Studio Experiments
+      - name: Deploy Chaos Studio Experiments
+        run: |
+          $RESOURCE_ID = ${{ steps.Kubernetes.outputs.id }}
+          $AKS_NAME = ${{ env.KUBERNETESSERVICENAME }}
+          $RESOURCE_GROUP = ${{ secrets.AZURE_RG }}
+          $SUBSCRIPTION_ID = ${{ secrets.AZURE_SUBSCRIPTION }}
+          $EXPERIMENT_NAME = "Experiment1"         
+          az rest --method put --url "https://management.azure.com/$RESOURCE_ID/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh?api-version=2021-09-15-preview" --body '{\"properties\":{}}'
+          az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/PodChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
+          $EXPERIMENT_PRINCIPAL_ID = az rest --method put --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME?api-version=2021-09-15-preview --body '@experiment.json' --query identity.principalId
+          az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope $RESOURCE_ID
+
+      # Run Chaos Experiments
+      - name: Run Chaos Experiments
+        run: |
+          $RESOURCE_GROUP = ${{ secrets.AZURE_RG }}
+          $SUBSCRIPTION_ID = ${{ secrets.AZURE_SUBSCRIPTION }}
+          $EXPERIMENT_NAME = "Experiment1"    
+          az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
+          
       # Deploy Bicep file Azure Load Testing
       - name: Deploy Bicep file Azure Load Testing
         uses: azure/arm-deploy@v1
