--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,10 +167,10 @@ jobs:
       # Deploy Chaos Studio Experiments
       - name: Deploy Chaos Studio Experiments
         run: |
-          $RESOURCE_ID = ${{ steps.Kubernetes.outputs.id }}
-          $AKS_NAME = ${{ env.KUBERNETESSERVICENAME }}
-          $RESOURCE_GROUP = ${{ secrets.AZURE_RG }}
-          $SUBSCRIPTION_ID = ${{ secrets.AZURE_SUBSCRIPTION }}
+          $RESOURCE_ID = "${{ steps.Kubernetes.outputs.id }}"
+          $AKS_NAME = "${{ env.KUBERNETESSERVICENAME }}"
+          $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
+          $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
           $EXPERIMENT_NAME = "Experiment1"         
           az rest --method put --url "https://management.azure.com/$RESOURCE_ID/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh?api-version=2021-09-15-preview" --body '{\"properties\":{}}'
           az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/PodChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
@@ -180,8 +180,8 @@ jobs:
       # Run Chaos Experiments
       - name: Run Chaos Experiments
         run: |
-          $RESOURCE_GROUP = ${{ secrets.AZURE_RG }}
-          $SUBSCRIPTION_ID = ${{ secrets.AZURE_SUBSCRIPTION }}
+          $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
+          $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
           $EXPERIMENT_NAME = "Experiment1"    
           az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
 
