--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,7 +117,7 @@ jobs:
         run: |
           helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
           helm repo update
-          helm upgrade --install prometheus-stack prometheus-community/kube-prometheus-stack --values src/helloworld-service/prometheus.values.demo.yaml --wait --debug --atomic --timeout 600s --namespace "prometheus" --create-namespace
+          helm upgrade --install prometheus-stack prometheus-community/kube-prometheus-stack --values src/helloworld-service/prometheus.values.demo.yaml --wait --debug --atomic --timeout 600s --set grafana.adminPassword="${{ secrets.GRAFANA_ADMIN_PASSWORD }}" --namespace "prometheus" --create-namespace
 
       # Set up Chaos Mesh on your AKS cluster
       - name: Set up Chaos Mesh on your AKS cluster
@@ -141,14 +141,14 @@ jobs:
           $EXPERIMENT_PRINCIPAL_ID = az rest --method put --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/?api-version=2021-09-15-preview --body '@experiment.json' --query identity.principalId
           az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope $RESOURCE_ID
   
-      # Run Chaos Experiments
-      - name: Run Chaos Experiments
-        shell: pwsh
-        run: |
-          $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
-          $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
-          $EXPERIMENT_NAME = "Experiment1"    
-          az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
+      # # Run Chaos Experiments
+      # - name: Run Chaos Experiments
+      #   shell: pwsh
+      #   run: |
+      #     $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
+      #     $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
+      #     $EXPERIMENT_NAME = "Experiment1"    
+      #     az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
 
       # Deploy Bicep file Azure Load Testing
       - name: Deploy Bicep file Azure Load Testing
