--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,51 +131,59 @@ jobs:
           helm repo update
           helm upgrade --install chaos-mesh chaos-mesh/chaos-mesh --set chaosDaemon.runtime=containerd --set chaosDaemon.socketPath=/run/containerd/containerd.sock --namespace "chaos-testing" --create-namespace
 
-      # Create Chaos Mesh Pod Faults Experiment
-      - name: Create Chaos Mesh Pod Faults Experiment
+      # Enable Chaos Studio on your AKS cluster
+      - name: Enable Chaos Studio on your AKS cluster
         shell: pwsh
         run: |
-          cd src/chaos-studio
           $RESOURCE_ID = "${{ steps.Kubernetes.outputs.id }}"
+          az rest --method put --url "https://management.azure.com/$RESOURCE_ID/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh?api-version=2021-09-15-preview" --body '{\"properties\":{}}'
+      
+      # Create The Capabilities On The Target
+      - name: Create The Capabilities On The Target
+        shell: pwsh
+        run: |
           $AKS_NAME = "${{ env.KUBERNETESSERVICENAME }}"
           $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
           $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
-          $EXPERIMENT_NAME = "ChaosMeshPodFaultsExperiment"
-          az rest --method put --url "https://management.azure.com/$RESOURCE_ID/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh?api-version=2021-09-15-preview" --body '{\"properties\":{}}'
-          az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/PodChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
-          $EXPERIMENT_PRINCIPAL_ID = az rest --method put --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/?api-version=2021-09-15-preview --body '@chaosMeshPodFaults.json' --query identity.principalId
-          az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope $RESOURCE_ID
-  
-      # Create Chaos Mesh Pod Stress Experiment
-      - name: Create Chaos Mesh Stress Faults Experiment
-        shell: pwsh
-        run: |
-          cd src/chaos-studio
-          $RESOURCE_ID = "${{ steps.Kubernetes.outputs.id }}"
-          $AKS_NAME = "${{ env.KUBERNETESSERVICENAME }}"
-          $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
-          $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
-          $EXPERIMENT_NAME = "ChaosMeshStressFaultsExperiment"
-          az rest --method put --url "https://management.azure.com/$RESOURCE_ID/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh?api-version=2021-09-15-preview" --body '{\"properties\":{}}'
-          az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/StressChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
-          $EXPERIMENT_PRINCIPAL_ID = az rest --method put --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/?api-version=2021-09-15-preview --body '@chaosMeshStressFaults.json' --query identity.principalId
-          az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope $RESOURCE_ID
+          $CAPABILITIES = "PodChaos-2.1&StressChaos-2.1&HTTPChaos-2.1"
+          az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/$CAPABILITIES?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
 
-      # Create Chaos Mesh Http Faults Experiment
-      - name: Create Chaos Mesh Http Faults Experiment
+      # # Create Chaos Mesh Pod Faults Experiment
+      # - name: Create Chaos Mesh Pod Faults Experiment
+      #   shell: pwsh
+      #   run: |
+      #     cd src/chaos-studio
+      #     $RESOURCE_ID = "${{ steps.Kubernetes.outputs.id }}"
+      #     $AKS_NAME = "${{ env.KUBERNETESSERVICENAME }}"
+      #     $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
+      #     $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
+      #     $EXPERIMENT_NAME = "ChaosMeshPodFaultsExperiment"
+      #     az rest --method put --url "https://management.azure.com/$RESOURCE_ID/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh?api-version=2021-09-15-preview" --body '{\"properties\":{}}'
+      #     az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/PodChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
+      #     $EXPERIMENT_PRINCIPAL_ID = az rest --method put --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/?api-version=2021-09-15-preview --body '@chaosMeshPodFaults.json' --query identity.principalId
+      #     az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope $RESOURCE_ID
+
+      # Convert Yaml to Json
+      - name: Convert Yaml to Json
+        id: converter
         shell: pwsh
         run: |
-          cd src/chaos-studio
-          $RESOURCE_ID = "${{ steps.Kubernetes.outputs.id }}"
-          $AKS_NAME = "${{ env.KUBERNETESSERVICENAME }}"
-          $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
-          $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
-          $EXPERIMENT_NAME = "ChaosMeshHttpFaultsExperiment"
-          az rest --method put --url "https://management.azure.com/$RESOURCE_ID/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh?api-version=2021-09-15-preview" --body '{\"properties\":{}}'
-          az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/HTTPChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
-          $EXPERIMENT_PRINCIPAL_ID = az rest --method put --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/?api-version=2021-09-15-preview --body '@chaosMeshHttpFaults.json' --query identity.principalId
-          az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope $RESOURCE_ID
-    
+          Install-Module powershell-yaml -Force
+          $FileContent = Get-Content -Raw "./Bicep/config/podFailure.yaml"
+          $PsYaml = ConvertFrom-Yaml -Yaml $FileContent -AllDocuments
+          $PsJson = @($PsYaml | ConvertTo-Json -Compress)
+          echo "::set-output name=json::$PsJson"
+
+      # Deploy Bicep file Chaos Experiment
+      - name: Deploy Bicep file Chaos Experiment
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ secrets.AZURE_RG }}
+          template: ./Bicep/ACS/mainACS.bicep
+          parameters: experimentName="ChaosMeshPodFaultsExperiment" aksName="${{ env.KUBERNETESSERVICENAME }}" stepName="AKS PodKill" branchName="AKS PodKill" actionName="podChaos" actionValue="${{ steps.converter.outputs.json }}" duration='PT10M'
+          failOnStdErr: false
+
       # # Run Chaos Experiments
       # - name: Run Chaos Experiments
       #   shell: pwsh
