--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -150,7 +150,7 @@ jobs:
           az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/PodChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
           az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/StressChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
           az rest --method put --url "https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME/providers/Microsoft.Chaos/targets/Microsoft-AzureKubernetesServiceChaosMesh/capabilities/HTTPChaos-2.1?api-version=2021-09-15-preview"  --body '{\"properties\":{}}'
-          
+
       # # Create Chaos Mesh Pod Faults Experiment
       # - name: Create Chaos Mesh Pod Faults Experiment
       #   shell: pwsh
@@ -172,7 +172,7 @@ jobs:
         shell: pwsh
         run: |
           Install-Module powershell-yaml -Force
-          $FileContent = Get-Content -Raw "./Bicep/config/podFailure.yaml"
+          $FileContent = Get-Content -Raw "Bicep/ACS/config/podFailure.yaml"
           $PsYaml = ConvertFrom-Yaml -Yaml $FileContent -AllDocuments
           $PsJson = @($PsYaml | ConvertTo-Json -Compress)
           echo "::set-output name=json::$PsJson"
