--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,48 +81,48 @@ jobs:
           echo "IMAGETAG=${{ github.event.inputs.IMAGETAG }}" >> $GITHUB_ENV
           echo "IMAGEREPLICAS=${{ github.event.inputs.IMAGEREPLICAS }}" >> $GITHUB_ENV
 
-      # Deploy Bicep file Kubernetes service
-      - name: Deploy Bicep file Kubernetes service
-        id: Kubernetes
-        uses: azure/arm-deploy@v1
-        with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-          resourceGroupName: ${{ secrets.AZURE_RG }}
-          template: ./Bicep/AKS/mainAKS.bicep
-          parameters: name="${{ env.KUBERNETESSERVICENAME }}" agentVMSize="${{ env.AGENTVMSIZE}}"
-          failOnStdErr: false
+      # # Deploy Bicep file Kubernetes service
+      # - name: Deploy Bicep file Kubernetes service
+      #   id: Kubernetes
+      #   uses: azure/arm-deploy@v1
+      #   with:
+      #     subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+      #     resourceGroupName: ${{ secrets.AZURE_RG }}
+      #     template: ./Bicep/AKS/mainAKS.bicep
+      #     parameters: name="${{ env.KUBERNETESSERVICENAME }}" agentVMSize="${{ env.AGENTVMSIZE}}"
+      #     failOnStdErr: false
 
-      # Kubectl tool installer
-      - name: Kubectl tool installer
-        uses: Azure/setup-kubectl@v2.1
+      # # Kubectl tool installer
+      # - name: Kubectl tool installer
+      #   uses: Azure/setup-kubectl@v2.1
         
-      # Deploy Nginx Reverse Proxy service to Kubernetes
-      - name: Deploy Nginx Reverse Proxy service to Kubernetes
-        run: |
-          az aks get-credentials -n "${{ env.KUBERNETESSERVICENAME }}" -g "${{ secrets.AZURE_RG }}" 
-          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-          helm repo update
-          helm upgrade nginx ingress-nginx/ingress-nginx --install
+      # # Deploy Nginx Reverse Proxy service to Kubernetes
+      # - name: Deploy Nginx Reverse Proxy service to Kubernetes
+      #   run: |
+      #     az aks get-credentials -n "${{ env.KUBERNETESSERVICENAME }}" -g "${{ secrets.AZURE_RG }}" 
+      #     helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+      #     helm repo update
+      #     helm upgrade nginx ingress-nginx/ingress-nginx --install
 
-      # Assign role to Kubernetes service user to access Container Registry image
-      - name: Assign role to Kubernetes service user to access Container Registry image 
-        run: |
-          sleep 15
-          az aks update -n "${{ env.KUBERNETESSERVICENAME }}" -g "${{ secrets.AZURE_RG }}" --attach-acr "${{ env.CONTAINERREGISTRYNAME }}"
+      # # Assign role to Kubernetes service user to access Container Registry image
+      # - name: Assign role to Kubernetes service user to access Container Registry image 
+      #   run: |
+      #     sleep 15
+      #     az aks update -n "${{ env.KUBERNETESSERVICENAME }}" -g "${{ secrets.AZURE_RG }}" --attach-acr "${{ env.CONTAINERREGISTRYNAME }}"
 
-      # Deploy Container registry image to Kubernetes service 
-      - name: Deploy Container registry image to Kubernetes service
-        run: |
-          cd src/helloworld-service/user-service-chart
-          helm upgrade ${{ env.APPNAME }} . --install --set image.repository=${{ env.CONTAINERREGISTRYNAME }}.azurecr.io/${{ env.REPOSITORYNAME }} --set image.tag=${{ env.IMAGETAG }} --set app.name=${{ env.APPNAME }} --set image.replicas=${{ env.IMAGEREPLICAS }} --namespace "demo-performance" --create-namespace  
-          echo "CLUSTERIP=$(kubectl get service "nginx-ingress-nginx-controller" -n default -o jsonpath="{.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
+      # # Deploy Container registry image to Kubernetes service 
+      # - name: Deploy Container registry image to Kubernetes service
+      #   run: |
+      #     cd src/helloworld-service/user-service-chart
+      #     helm upgrade ${{ env.APPNAME }} . --install --set image.repository=${{ env.CONTAINERREGISTRYNAME }}.azurecr.io/${{ env.REPOSITORYNAME }} --set image.tag=${{ env.IMAGETAG }} --set app.name=${{ env.APPNAME }} --set image.replicas=${{ env.IMAGEREPLICAS }} --namespace "demo-performance" --create-namespace  
+      #     echo "CLUSTERIP=$(kubectl get service "nginx-ingress-nginx-controller" -n default -o jsonpath="{.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
 
-      # Deploy Prometheus service to Kubernetes
-      - name: Deploy Prometheus service to Kubernetes
-        run: |
-          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-          helm repo update
-          helm upgrade --install prometheus-stack prometheus-community/kube-prometheus-stack --values src/helloworld-service/prometheus.values.demo.yaml --wait --debug --atomic --timeout 600s --set grafana.adminPassword="${{ secrets.GRAFANA_ADMIN_PASSWORD }}" --namespace "prometheus" --create-namespace
+      # # Deploy Prometheus service to Kubernetes
+      # - name: Deploy Prometheus service to Kubernetes
+      #   run: |
+      #     helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+      #     helm repo update
+      #     helm upgrade --install prometheus-stack prometheus-community/kube-prometheus-stack --values src/helloworld-service/prometheus.values.demo.yaml --wait --debug --atomic --timeout 600s --set grafana.adminPassword="${{ secrets.GRAFANA_ADMIN_PASSWORD }}" --namespace "prometheus" --create-namespace
 
       # Set up Chaos Mesh on your AKS cluster
       - name: Set up Chaos Mesh on your AKS cluster
