--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -166,34 +166,57 @@ jobs:
       #     $EXPERIMENT_PRINCIPAL_ID = az rest --method put --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/?api-version=2021-09-15-preview --body '@chaosMeshPodFaults.json' --query identity.principalId
       #     az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope $RESOURCE_ID
 
-      # Convert Yaml to Json
-      - name: Convert Yaml to Json
+      # Convert Yaml faiuler to json
+      - name: Convert Pod Yaml to Json
         id: converter
         shell: pwsh
         run: |
           Install-Module powershell-yaml -Force
-          $FileContent = Get-Content -Raw "Bicep/ACS/config/podFailure.yaml"
-          $PsYaml = ConvertFrom-Yaml -Yaml $FileContent -AllDocuments
-          $PsJson = @($PsYaml | ConvertTo-Json -Compress)
-          echo "::set-output name=json::$PsJson"
+          $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "files/podFailure.yaml") | ConvertTo-Json -Compress)
+          echo "::set-output name=podFailur::$PsJson"
+          $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "files/strassFault.yaml") | ConvertTo-Json -Compress)
+          echo "::set-output name=stressFailur::$PsJson"
+          $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "files/httpFault.yaml") | ConvertTo-Json -Compress)
+          echo "::set-output name=httpFailur::$PsJson"
 
-      # Deploy Bicep file Chaos Experiment
-      - name: Deploy Bicep file Chaos Experiment
-        id: PodExperiment
+      # Deploy ChaosMeshPodFaultsExperiment
+      - name: Deploy Bicep file ChaosMeshPodFaultsExperiment
+        id: ChaosMeshPodFaultsExperiment
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./Bicep/ACS/mainACS.bicep
-          parameters: experimentName="ChaosMeshPodFaultsExperiment" aksName="${{ env.KUBERNETESSERVICENAME }}" actionValue="${{ steps.converter.outputs.json }}" actionName="podChaos"
+          parameters: experimentName="ChaosMeshPodFaultsExperiment" aksName="${{ env.KUBERNETESSERVICENAME }}" actionValue="${{ steps.converter.outputs.podFailur }}" actionName="podChaos"
           failOnStdErr: false
       
+      # Deploy Bicep file ChaosMeshStressFaultsExperiment
+      - name: Deploy ChaosMeshStressFaultsExperiment
+        id: ChaosMeshStressFaultsExperiment
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ secrets.AZURE_RG }}
+          template: ./Bicep/ACS/mainACS.bicep
+          parameters: experimentName="ChaosMeshStressFaultsExperiment" aksName="${{ env.KUBERNETESSERVICENAME }}" actionValue="${{ steps.converter.outputs.stressFailur }}" actionName="stressChaos"
+          failOnStdErr: false
+
+      # Deploy Bicep file ChaosMeshHttpFaultsExperiment
+      - name: Deploy ChaosMeshHttpFaultsExperiment
+        id: ChaosMeshHttpFaultsExperiment
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ secrets.AZURE_RG }}
+          template: ./Bicep/ACS/mainACS.bicep
+          parameters: experimentName="ChaosMeshPodFaultsExperiment" aksName="${{ env.KUBERNETESSERVICENAME }}" actionValue="${{ steps.converter.outputs.httpFailur }}" actionName="httpChaos"
+          failOnStdErr: false
       # Give experiment permission to your AKS cluster
       - name: Give experiment permission to your AKS cluster
         shell: pwsh
         run: |
           $RESOURCE_ID = "${{ steps.Kubernetes.outputs.id }}"
-          $EXPERIMENT_PRINCIPAL_ID = "${{ steps.PodExperiment.outputs.servicePrincipalId }}"
+          $EXPERIMENT_PRINCIPAL_ID = "${{ steps.ChaosMeshPodFaultsExperiment.outputs.servicePrincipalId }}"
           az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope $RESOURCE_ID
       
       # # Run Chaos Experiments
