--- a/Bicep/ALT/config.yaml
+++ b/Bicep/ALT/config.yaml
@@ -2,6 +2,6 @@ testName: Test1
 testPlan: Test1.jmx
 description: Test1
 engineInstances: 10
-failureCriteria:
-- avg(response_time_ms) > 300
+# failureCriteria:
+# - avg(response_time_ms) > 300
 
