--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -182,7 +182,7 @@ jobs:
         shell: pwsh
         run: |
           Install-Module powershell-yaml -Force
-          $PsJson = @(Get-Content -Raw "Bicep/ACS/config/podFailure.json") | ConvertTo-Json -Compress)
+          $PsJson = @(Get-Content -Raw "Bicep/ACS/config/podFailure.json") | ConvertTo-Json -Compress
           echo "::set-output name=podFailur::$PsJson"
 
       # Print json
