--- a/src/chaos-studio/chaos-mesh/chaos-mesh-chart/templates/podFailure.yaml
+++ b/src/chaos-studio/chaos-mesh/chaos-mesh-chart/templates/podFailure.yaml
@@ -1,7 +1,7 @@
 apiVersion: chaos-mesh.org/v1alpha1
 kind: PodChaos
 metadata:
-  name: pod-failure-all-userapp
+  name: pod-failure-all-user-app
   namespace: chaos-testing
 spec:
   action: pod-failure
